2011-04-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main) src/misc.c (load_file): Initializing c_token to an
	illegal value is not a good idea.
	Bug #3292512

2011-04-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:  sync to docs version 1.664.
	* docs/Makefile.in (wxhelp/doc2html.o): Add missing space.

2011-04-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/readline.c docs/gnuplot.doc:  Built-in readline did not recognize
	the character sequence produced by the DEL key on many keyboards.  Trap
	this sequence for interpretation as "forward delete", which is what the
	same key does under windows and gnu libreadline.  This does not affect 
	keyboards or xmodmap configurations where the DEL key produces another
	sequence entirely.

2011-04-22  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c:  The behavior of ^W was not consistent with the 
	documentation. Change it to match gnu libreadline (delete previous
	partial or full word).

2011-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Most of the messages passed via the title bar
	of the X Display window are controlled by #ifdef TITLE_BAR_DRAWING_MSG.
	Do the same for the "allocating colors..." message.

2011-04-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/Makefile.am.in (Makefile.am): Additional files to become
	part of the distributed tarball.  Reindented.

2011-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_columnhead df_set_key_title) src/datafile.h
	src/eval.c src/plot2d.c (eval_plots) docs/gnuplot.doc:

	New function columnhead(N) that returns a string containing column N
	from the first line of a data set. 'plot ... title columnhead(i)'
	was previously implemented as a keyword; making it a function instead
	allows, for example,
	'plot for [i=3:6] ... title "Results of ".columnhead(i)'

2011-04-19  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
